--- a/udf-script-signature-generator/udf-script-signature-generator.html
+++ b/udf-script-signature-generator/udf-script-signature-generator.html
@@ -62,13 +62,11 @@ for(i=0; i<emits_cols.length;i++) {
 
 
 
-
-
 if (scalar_set == 'SET' && parameters.length==0) {
  add_parameter();
 }
 
-if(obj.id=='scalar_set' && obj.value=='SCALAR' && parameters.length==1 && parameters[0].value=='' && parameter_types[0].value=='') {
+if(obj.id=='input_scalar' && parameters.length==1 && parameters[0].value=='' && parameter_types[0].value=='') {
  remove_li(parameters[0].parentNode);
 }
 
@@ -266,7 +264,7 @@ function remove_li(obj) {
 <textarea style="width:600px" id="sql" rows="12"></textarea>
 <ul>
 <li>Language: <input type="radio" name="language" id="language_python" oninput="generate_sql(this)" checked>PYTHON <input name="language" type="radio" id="language_lua" oninput="generate_sql(this)">Lua <input type="radio" name="language" id="language_java" oninput="generate_sql(this)">Java <input name="language" type="radio" id="language_r" oninput="generate_sql(this)">R</li> 
-<li>Input Type: <input type="radio" name="scalar_set" id="imput_scalar" oninput="generate_sql(this)" checked>SCALAR <input name="scalar_set" type="radio" id="input_set" oninput="generate_sql(this)">SET</li> 
+<li>Input Type: <input type="radio" name="scalar_set" id="input_scalar" oninput="generate_sql(this)" checked>SCALAR <input name="scalar_set" type="radio" id="input_set" oninput="generate_sql(this)">SET</li> 
 <li>Script Name: <input type="text" id="name" oninput="generate_sql(this)"></input></li>
 <li>Input Parameters: <button onClick="add_parameter()">Add</button> <input type="checkbox" id="variadic_input" oninput="generate_sql(this)"/> Variadic
     <ul id="ul_parameters">
