--- a/udf-script-signature-generator/udf-script-signature-generator.html
+++ b/udf-script-signature-generator/udf-script-signature-generator.html
@@ -358,7 +358,7 @@ function remove_li(obj) {
 <body onLoad="generate_sql(this)">
 
 <header>
-<img alt="Exasol" src="https://docs.exasol.com/7.0/resource/images/Exasol_white.svg" height="25pt"> UDF-Script Signature Generator
+<img alt="Exasol" src="https://docs.exasol.com/7.0/resource/images/Exasol_white.svg" height="24px"> UDF-Script Signature Generator
 </header>
 <section>
 <textarea style="width:480px" id="sql" rows="12"></textarea>
